# serenity

./: .gitignore  CMakeLists.txt  Makefile.common  Makefile.common64
AK/: Debug.h.in  NumericLimits.h  Platform.h  Ptr64.h  SIMD.h  String.h  StringImpl.cpp  StringImpl.h  Types.h
Applications/About/: main.cpp
Base/etc/: SystemServer.ini  group  passwd
Kernel/: Assertions.h  CMakeLists.txt  Debug.h.in  Lock.h  Makefile  Process.cpp  Random.cpp  Syscall.cpp  Thread.cpp  Thread.h  ThreadTracer.h  init.cpp  makeall64.sh  run
Kernel/Arch/: Processor.h
Kernel/Devices/: KeyboardDevice.cpp  PATAChannel.cpp  PATAChannel.h  PCSpeaker.cpp  PIT.cpp  VMWareBackdoor.cpp
Kernel/FileSystem/: DiskBackedFileSystem.cpp  FATFileSystem.cpp  FATFileSystem.h  ProcFS.cpp
Kernel/Heap/: kmalloc.cpp
Kernel/Interrupts/: APIC.cpp  GenericInterruptHandler.cpp  GenericInterruptHandler.h  IOAPIC.cpp  IRQHandler.cpp  IRQHandler.h  InterruptManagement.cpp  PIC.cpp  SharedIRQHandler.cpp  SpuriousInterruptHandler.h  UnhandledInterruptHandler.h
Kernel/Prekernel/: CMakeLists.txt  UBSanitizer.cpp
Kernel/TTY/: VirtualConsole.cpp
Kernel/VM/: MemoryManager.cpp  MemoryManager.h  PageDirectory.cpp  PageDirectory.h  Region.cpp
Libraries/: CMakeLists.txt
Libraries/LibBareMetal/: StdLib.h
Libraries/LibGL/: GLColor.cpp  (+11 more)
Ports/: AvailablePorts.md
Services/: CMakeLists.txt
Services/DiagnosticServer/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  DiagnosticClient.ipc  DiagnosticDialog.cpp  DiagnosticDialog.h  DiagnosticServer.ipc  main.cpp
Shell/: LineEditor.cpp  LineEditor.h
(+85 files in other folders)
